@@ -4,41 +4,34 @@
  */
 package com.jyuzawa.onnxruntime_extern;
 
-import static jdk.incubator.foreign.CLinker.*;
+import static java.lang.foreign.ValueLayout.*;
 
-import jdk.incubator.foreign.*;
+import java.lang.foreign.*;
 
 public interface OrtCustomCreateThreadFn {
 
-    jdk.incubator.foreign.MemoryAddress apply(
-            jdk.incubator.foreign.MemoryAddress x0,
-            jdk.incubator.foreign.MemoryAddress x1,
-            jdk.incubator.foreign.MemoryAddress x2);
+    java.lang.foreign.Addressable apply(
+            java.lang.foreign.MemoryAddress ort_custom_thread_creation_options,
+            java.lang.foreign.MemoryAddress ort_thread_worker_fn,
+            java.lang.foreign.MemoryAddress ort_worker_fn_param);
 
-    static MemoryAddress allocate(OrtCustomCreateThreadFn fi) {
+    static MemorySegment allocate(OrtCustomCreateThreadFn fi, MemorySession session) {
         return RuntimeHelper.upcallStub(
-                OrtCustomCreateThreadFn.class,
-                fi,
-                constants$0.OrtCustomCreateThreadFn$FUNC,
-                "(Ljdk/incubator/foreign/MemoryAddress;Ljdk/incubator/foreign/MemoryAddress;Ljdk/incubator/foreign/MemoryAddress;)Ljdk/incubator/foreign/MemoryAddress;");
+                OrtCustomCreateThreadFn.class, fi, constants$0.OrtCustomCreateThreadFn$FUNC, session);
     }
 
-    static MemoryAddress allocate(OrtCustomCreateThreadFn fi, ResourceScope scope) {
-        return RuntimeHelper.upcallStub(
-                OrtCustomCreateThreadFn.class,
-                fi,
-                constants$0.OrtCustomCreateThreadFn$FUNC,
-                "(Ljdk/incubator/foreign/MemoryAddress;Ljdk/incubator/foreign/MemoryAddress;Ljdk/incubator/foreign/MemoryAddress;)Ljdk/incubator/foreign/MemoryAddress;",
-                scope);
-    }
-
-    static OrtCustomCreateThreadFn ofAddress(MemoryAddress addr) {
-        return (jdk.incubator.foreign.MemoryAddress x0,
-                jdk.incubator.foreign.MemoryAddress x1,
-                jdk.incubator.foreign.MemoryAddress x2) -> {
+    static OrtCustomCreateThreadFn ofAddress(MemoryAddress addr, MemorySession session) {
+        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+        return (java.lang.foreign.MemoryAddress _ort_custom_thread_creation_options,
+                java.lang.foreign.MemoryAddress _ort_thread_worker_fn,
+                java.lang.foreign.MemoryAddress _ort_worker_fn_param) -> {
             try {
-                return (jdk.incubator.foreign.MemoryAddress)
-                        constants$1.OrtCustomCreateThreadFn$MH.invokeExact((Addressable) addr, x0, x1, x2);
+                return (java.lang.foreign.Addressable)
+                        (java.lang.foreign.MemoryAddress) constants$1.OrtCustomCreateThreadFn$MH.invokeExact(
+                                (Addressable) symbol,
+                                (java.lang.foreign.Addressable) _ort_custom_thread_creation_options,
+                                (java.lang.foreign.Addressable) _ort_thread_worker_fn,
+                                (java.lang.foreign.Addressable) _ort_worker_fn_param);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
