@@ -4,22 +4,23 @@
  */
 package com.jyuzawa.onnxruntime_extern;
 
-import static jdk.incubator.foreign.CLinker.*;
+import static java.lang.foreign.ValueLayout.*;
 
+import java.lang.foreign.*;
 import java.lang.invoke.VarHandle;
-import jdk.incubator.foreign.*;
 
 public class OrtCustomHandleType {
 
-    static final MemoryLayout $struct$LAYOUT =
-            MemoryLayout.structLayout(C_CHAR.withName("__place_holder")).withName("OrtCustomHandleType");
+    static final GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
+                    Constants$root.C_CHAR$LAYOUT.withName("__place_holder"))
+            .withName("OrtCustomHandleType");
 
     public static MemoryLayout $LAYOUT() {
         return OrtCustomHandleType.$struct$LAYOUT;
     }
 
     static final VarHandle __place_holder$VH =
-            $struct$LAYOUT.varHandle(byte.class, MemoryLayout.PathElement.groupElement("__place_holder"));
+            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("__place_holder"));
 
     public static VarHandle __place_holder$VH() {
         return OrtCustomHandleType.__place_holder$VH;
@@ -49,19 +50,11 @@ public class OrtCustomHandleType {
         return allocator.allocate($LAYOUT());
     }
 
-    public static MemorySegment allocate(ResourceScope scope) {
-        return allocate(SegmentAllocator.ofScope(scope));
-    }
-
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
 
-    public static MemorySegment allocateArray(int len, ResourceScope scope) {
-        return allocateArray(len, SegmentAllocator.ofScope(scope));
-    }
-
-    public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) {
-        return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope);
+    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) {
+        return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session);
     }
 }
