@@ -4,35 +4,25 @@
  */
 package com.jyuzawa.onnxruntime_extern;
 
-import static jdk.incubator.foreign.CLinker.*;
+import static java.lang.foreign.ValueLayout.*;
 
-import jdk.incubator.foreign.*;
+import java.lang.foreign.*;
 
 public interface OrtCustomJoinThreadFn {
 
-    void apply(jdk.incubator.foreign.MemoryAddress x0);
+    void apply(java.lang.foreign.MemoryAddress ort_custom_thread_handle);
 
-    static MemoryAddress allocate(OrtCustomJoinThreadFn fi) {
+    static MemorySegment allocate(OrtCustomJoinThreadFn fi, MemorySession session) {
         return RuntimeHelper.upcallStub(
-                OrtCustomJoinThreadFn.class,
-                fi,
-                constants$1.OrtCustomJoinThreadFn$FUNC,
-                "(Ljdk/incubator/foreign/MemoryAddress;)V");
+                OrtCustomJoinThreadFn.class, fi, constants$1.OrtCustomJoinThreadFn$FUNC, session);
     }
 
-    static MemoryAddress allocate(OrtCustomJoinThreadFn fi, ResourceScope scope) {
-        return RuntimeHelper.upcallStub(
-                OrtCustomJoinThreadFn.class,
-                fi,
-                constants$1.OrtCustomJoinThreadFn$FUNC,
-                "(Ljdk/incubator/foreign/MemoryAddress;)V",
-                scope);
-    }
-
-    static OrtCustomJoinThreadFn ofAddress(MemoryAddress addr) {
-        return (jdk.incubator.foreign.MemoryAddress x0) -> {
+    static OrtCustomJoinThreadFn ofAddress(MemoryAddress addr, MemorySession session) {
+        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+        return (java.lang.foreign.MemoryAddress _ort_custom_thread_handle) -> {
             try {
-                constants$1.OrtCustomJoinThreadFn$MH.invokeExact((Addressable) addr, x0);
+                constants$1.OrtCustomJoinThreadFn$MH.invokeExact(
+                        (Addressable) symbol, (java.lang.foreign.Addressable) _ort_custom_thread_handle);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
