@@ -4,36 +4,35 @@
  */
 package com.jyuzawa.onnxruntime_extern;
 
-import static jdk.incubator.foreign.CLinker.*;
+import static java.lang.foreign.ValueLayout.*;
 
+import java.lang.foreign.*;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
-import jdk.incubator.foreign.*;
 
 public class OrtCustomOp {
 
-    static final MemoryLayout $struct$LAYOUT = MemoryLayout.structLayout(
-                    C_INT.withName("version"),
+    static final GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
+                    Constants$root.C_INT$LAYOUT.withName("version"),
                     MemoryLayout.paddingLayout(32),
-                    C_POINTER.withName("CreateKernel"),
-                    C_POINTER.withName("GetName"),
-                    C_POINTER.withName("GetExecutionProviderType"),
-                    C_POINTER.withName("GetInputType"),
-                    C_POINTER.withName("GetInputTypeCount"),
-                    C_POINTER.withName("GetOutputType"),
-                    C_POINTER.withName("GetOutputTypeCount"),
-                    C_POINTER.withName("KernelCompute"),
-                    C_POINTER.withName("KernelDestroy"),
-                    C_POINTER.withName("GetInputCharacteristic"),
-                    C_POINTER.withName("GetOutputCharacteristic"))
+                    Constants$root.C_POINTER$LAYOUT.withName("CreateKernel"),
+                    Constants$root.C_POINTER$LAYOUT.withName("GetName"),
+                    Constants$root.C_POINTER$LAYOUT.withName("GetExecutionProviderType"),
+                    Constants$root.C_POINTER$LAYOUT.withName("GetInputType"),
+                    Constants$root.C_POINTER$LAYOUT.withName("GetInputTypeCount"),
+                    Constants$root.C_POINTER$LAYOUT.withName("GetOutputType"),
+                    Constants$root.C_POINTER$LAYOUT.withName("GetOutputTypeCount"),
+                    Constants$root.C_POINTER$LAYOUT.withName("KernelCompute"),
+                    Constants$root.C_POINTER$LAYOUT.withName("KernelDestroy"),
+                    Constants$root.C_POINTER$LAYOUT.withName("GetInputCharacteristic"),
+                    Constants$root.C_POINTER$LAYOUT.withName("GetOutputCharacteristic"))
             .withName("OrtCustomOp");
 
     public static MemoryLayout $LAYOUT() {
         return OrtCustomOp.$struct$LAYOUT;
     }
 
-    static final VarHandle version$VH =
-            $struct$LAYOUT.varHandle(int.class, MemoryLayout.PathElement.groupElement("version"));
+    static final VarHandle version$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("version"));
 
     public static VarHandle version$VH() {
         return OrtCustomOp.version$VH;
@@ -55,44 +54,36 @@ public class OrtCustomOp {
         OrtCustomOp.version$VH.set(seg.asSlice(index * sizeof()), x);
     }
 
-    static final FunctionDescriptor CreateKernel$FUNC =
-            FunctionDescriptor.of(C_POINTER, C_POINTER, C_POINTER, C_POINTER);
-    static final MethodHandle CreateKernel$MH = RuntimeHelper.downcallHandle(
-            "(Ljdk/incubator/foreign/MemoryAddress;Ljdk/incubator/foreign/MemoryAddress;Ljdk/incubator/foreign/MemoryAddress;)Ljdk/incubator/foreign/MemoryAddress;",
-            OrtCustomOp.CreateKernel$FUNC,
-            false);
+    static final FunctionDescriptor CreateKernel$FUNC = FunctionDescriptor.of(
+            Constants$root.C_POINTER$LAYOUT,
+            Constants$root.C_POINTER$LAYOUT,
+            Constants$root.C_POINTER$LAYOUT,
+            Constants$root.C_POINTER$LAYOUT);
+    static final MethodHandle CreateKernel$MH = RuntimeHelper.downcallHandle(OrtCustomOp.CreateKernel$FUNC);
 
     public interface CreateKernel {
 
-        jdk.incubator.foreign.MemoryAddress apply(
-                jdk.incubator.foreign.MemoryAddress x0,
-                jdk.incubator.foreign.MemoryAddress x1,
-                jdk.incubator.foreign.MemoryAddress x2);
+        java.lang.foreign.Addressable apply(
+                java.lang.foreign.MemoryAddress _x0,
+                java.lang.foreign.MemoryAddress _x1,
+                java.lang.foreign.MemoryAddress _x2);
 
-        static MemoryAddress allocate(CreateKernel fi) {
-            return RuntimeHelper.upcallStub(
-                    CreateKernel.class,
-                    fi,
-                    OrtCustomOp.CreateKernel$FUNC,
-                    "(Ljdk/incubator/foreign/MemoryAddress;Ljdk/incubator/foreign/MemoryAddress;Ljdk/incubator/foreign/MemoryAddress;)Ljdk/incubator/foreign/MemoryAddress;");
+        static MemorySegment allocate(CreateKernel fi, MemorySession session) {
+            return RuntimeHelper.upcallStub(CreateKernel.class, fi, OrtCustomOp.CreateKernel$FUNC, session);
         }
 
-        static MemoryAddress allocate(CreateKernel fi, ResourceScope scope) {
-            return RuntimeHelper.upcallStub(
-                    CreateKernel.class,
-                    fi,
-                    OrtCustomOp.CreateKernel$FUNC,
-                    "(Ljdk/incubator/foreign/MemoryAddress;Ljdk/incubator/foreign/MemoryAddress;Ljdk/incubator/foreign/MemoryAddress;)Ljdk/incubator/foreign/MemoryAddress;",
-                    scope);
-        }
-
-        static CreateKernel ofAddress(MemoryAddress addr) {
-            return (jdk.incubator.foreign.MemoryAddress x0,
-                    jdk.incubator.foreign.MemoryAddress x1,
-                    jdk.incubator.foreign.MemoryAddress x2) -> {
+        static CreateKernel ofAddress(MemoryAddress addr, MemorySession session) {
+            MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+            return (java.lang.foreign.MemoryAddress __x0,
+                    java.lang.foreign.MemoryAddress __x1,
+                    java.lang.foreign.MemoryAddress __x2) -> {
                 try {
-                    return (jdk.incubator.foreign.MemoryAddress)
-                            OrtCustomOp.CreateKernel$MH.invokeExact((Addressable) addr, x0, x1, x2);
+                    return (java.lang.foreign.Addressable)
+                            (java.lang.foreign.MemoryAddress) OrtCustomOp.CreateKernel$MH.invokeExact(
+                                    (Addressable) symbol,
+                                    (java.lang.foreign.Addressable) __x0,
+                                    (java.lang.foreign.Addressable) __x1,
+                                    (java.lang.foreign.Addressable) __x2);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -100,15 +91,15 @@ public class OrtCustomOp {
         }
     }
 
-    static final VarHandle CreateKernel$VH = MemoryHandles.asAddressVarHandle(
-            $struct$LAYOUT.varHandle(long.class, MemoryLayout.PathElement.groupElement("CreateKernel")));
+    static final VarHandle CreateKernel$VH =
+            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("CreateKernel"));
 
     public static VarHandle CreateKernel$VH() {
         return OrtCustomOp.CreateKernel$VH;
     }
 
     public static MemoryAddress CreateKernel$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress) OrtCustomOp.CreateKernel$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress) OrtCustomOp.CreateKernel$VH.get(seg);
     }
 
     public static void CreateKernel$set(MemorySegment seg, MemoryAddress x) {
@@ -116,49 +107,36 @@ public class OrtCustomOp {
     }
 
     public static MemoryAddress CreateKernel$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress) OrtCustomOp.CreateKernel$VH.get(seg.asSlice(index * sizeof()));
+        return (java.lang.foreign.MemoryAddress) OrtCustomOp.CreateKernel$VH.get(seg.asSlice(index * sizeof()));
     }
 
     public static void CreateKernel$set(MemorySegment seg, long index, MemoryAddress x) {
         OrtCustomOp.CreateKernel$VH.set(seg.asSlice(index * sizeof()), x);
     }
 
-    public static CreateKernel CreateKernel(MemorySegment segment) {
-        return CreateKernel.ofAddress(CreateKernel$get(segment));
+    public static CreateKernel CreateKernel(MemorySegment segment, MemorySession session) {
+        return CreateKernel.ofAddress(CreateKernel$get(segment), session);
     }
 
-    static final FunctionDescriptor GetName$FUNC = FunctionDescriptor.of(C_POINTER, C_POINTER);
-    static final MethodHandle GetName$MH = RuntimeHelper.downcallHandle(
-            "(Ljdk/incubator/foreign/MemoryAddress;)Ljdk/incubator/foreign/MemoryAddress;",
-            OrtCustomOp.GetName$FUNC,
-            false);
+    static final FunctionDescriptor GetName$FUNC =
+            FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT, Constants$root.C_POINTER$LAYOUT);
+    static final MethodHandle GetName$MH = RuntimeHelper.downcallHandle(OrtCustomOp.GetName$FUNC);
 
     public interface GetName {
 
-        jdk.incubator.foreign.MemoryAddress apply(jdk.incubator.foreign.MemoryAddress x0);
+        java.lang.foreign.Addressable apply(java.lang.foreign.MemoryAddress _x0);
 
-        static MemoryAddress allocate(GetName fi) {
-            return RuntimeHelper.upcallStub(
-                    GetName.class,
-                    fi,
-                    OrtCustomOp.GetName$FUNC,
-                    "(Ljdk/incubator/foreign/MemoryAddress;)Ljdk/incubator/foreign/MemoryAddress;");
+        static MemorySegment allocate(GetName fi, MemorySession session) {
+            return RuntimeHelper.upcallStub(GetName.class, fi, OrtCustomOp.GetName$FUNC, session);
         }
 
-        static MemoryAddress allocate(GetName fi, ResourceScope scope) {
-            return RuntimeHelper.upcallStub(
-                    GetName.class,
-                    fi,
-                    OrtCustomOp.GetName$FUNC,
-                    "(Ljdk/incubator/foreign/MemoryAddress;)Ljdk/incubator/foreign/MemoryAddress;",
-                    scope);
-        }
-
-        static GetName ofAddress(MemoryAddress addr) {
-            return (jdk.incubator.foreign.MemoryAddress x0) -> {
+        static GetName ofAddress(MemoryAddress addr, MemorySession session) {
+            MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+            return (java.lang.foreign.MemoryAddress __x0) -> {
                 try {
-                    return (jdk.incubator.foreign.MemoryAddress)
-                            OrtCustomOp.GetName$MH.invokeExact((Addressable) addr, x0);
+                    return (java.lang.foreign.Addressable)
+                            (java.lang.foreign.MemoryAddress) OrtCustomOp.GetName$MH.invokeExact(
+                                    (Addressable) symbol, (java.lang.foreign.Addressable) __x0);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -166,15 +144,14 @@ public class OrtCustomOp {
         }
     }
 
-    static final VarHandle GetName$VH = MemoryHandles.asAddressVarHandle(
-            $struct$LAYOUT.varHandle(long.class, MemoryLayout.PathElement.groupElement("GetName")));
+    static final VarHandle GetName$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("GetName"));
 
     public static VarHandle GetName$VH() {
         return OrtCustomOp.GetName$VH;
     }
 
     public static MemoryAddress GetName$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress) OrtCustomOp.GetName$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress) OrtCustomOp.GetName$VH.get(seg);
     }
 
     public static void GetName$set(MemorySegment seg, MemoryAddress x) {
@@ -182,49 +159,38 @@ public class OrtCustomOp {
     }
 
     public static MemoryAddress GetName$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress) OrtCustomOp.GetName$VH.get(seg.asSlice(index * sizeof()));
+        return (java.lang.foreign.MemoryAddress) OrtCustomOp.GetName$VH.get(seg.asSlice(index * sizeof()));
     }
 
     public static void GetName$set(MemorySegment seg, long index, MemoryAddress x) {
         OrtCustomOp.GetName$VH.set(seg.asSlice(index * sizeof()), x);
     }
 
-    public static GetName GetName(MemorySegment segment) {
-        return GetName.ofAddress(GetName$get(segment));
+    public static GetName GetName(MemorySegment segment, MemorySession session) {
+        return GetName.ofAddress(GetName$get(segment), session);
     }
 
-    static final FunctionDescriptor GetExecutionProviderType$FUNC = FunctionDescriptor.of(C_POINTER, C_POINTER);
-    static final MethodHandle GetExecutionProviderType$MH = RuntimeHelper.downcallHandle(
-            "(Ljdk/incubator/foreign/MemoryAddress;)Ljdk/incubator/foreign/MemoryAddress;",
-            OrtCustomOp.GetExecutionProviderType$FUNC,
-            false);
+    static final FunctionDescriptor GetExecutionProviderType$FUNC =
+            FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT, Constants$root.C_POINTER$LAYOUT);
+    static final MethodHandle GetExecutionProviderType$MH =
+            RuntimeHelper.downcallHandle(OrtCustomOp.GetExecutionProviderType$FUNC);
 
     public interface GetExecutionProviderType {
 
-        jdk.incubator.foreign.MemoryAddress apply(jdk.incubator.foreign.MemoryAddress x0);
+        java.lang.foreign.Addressable apply(java.lang.foreign.MemoryAddress _x0);
 
-        static MemoryAddress allocate(GetExecutionProviderType fi) {
+        static MemorySegment allocate(GetExecutionProviderType fi, MemorySession session) {
             return RuntimeHelper.upcallStub(
-                    GetExecutionProviderType.class,
-                    fi,
-                    OrtCustomOp.GetExecutionProviderType$FUNC,
-                    "(Ljdk/incubator/foreign/MemoryAddress;)Ljdk/incubator/foreign/MemoryAddress;");
+                    GetExecutionProviderType.class, fi, OrtCustomOp.GetExecutionProviderType$FUNC, session);
         }
 
-        static MemoryAddress allocate(GetExecutionProviderType fi, ResourceScope scope) {
-            return RuntimeHelper.upcallStub(
-                    GetExecutionProviderType.class,
-                    fi,
-                    OrtCustomOp.GetExecutionProviderType$FUNC,
-                    "(Ljdk/incubator/foreign/MemoryAddress;)Ljdk/incubator/foreign/MemoryAddress;",
-                    scope);
-        }
-
-        static GetExecutionProviderType ofAddress(MemoryAddress addr) {
-            return (jdk.incubator.foreign.MemoryAddress x0) -> {
+        static GetExecutionProviderType ofAddress(MemoryAddress addr, MemorySession session) {
+            MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+            return (java.lang.foreign.MemoryAddress __x0) -> {
                 try {
-                    return (jdk.incubator.foreign.MemoryAddress)
-                            OrtCustomOp.GetExecutionProviderType$MH.invokeExact((Addressable) addr, x0);
+                    return (java.lang.foreign.Addressable)
+                            (java.lang.foreign.MemoryAddress) OrtCustomOp.GetExecutionProviderType$MH.invokeExact(
+                                    (Addressable) symbol, (java.lang.foreign.Addressable) __x0);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -232,15 +198,15 @@ public class OrtCustomOp {
         }
     }
 
-    static final VarHandle GetExecutionProviderType$VH = MemoryHandles.asAddressVarHandle(
-            $struct$LAYOUT.varHandle(long.class, MemoryLayout.PathElement.groupElement("GetExecutionProviderType")));
+    static final VarHandle GetExecutionProviderType$VH =
+            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("GetExecutionProviderType"));
 
     public static VarHandle GetExecutionProviderType$VH() {
         return OrtCustomOp.GetExecutionProviderType$VH;
     }
 
     public static MemoryAddress GetExecutionProviderType$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress) OrtCustomOp.GetExecutionProviderType$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress) OrtCustomOp.GetExecutionProviderType$VH.get(seg);
     }
 
     public static void GetExecutionProviderType$set(MemorySegment seg, MemoryAddress x) {
@@ -248,7 +214,7 @@ public class OrtCustomOp {
     }
 
     public static MemoryAddress GetExecutionProviderType$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)
+        return (java.lang.foreign.MemoryAddress)
                 OrtCustomOp.GetExecutionProviderType$VH.get(seg.asSlice(index * sizeof()));
     }
 
@@ -256,36 +222,28 @@ public class OrtCustomOp {
         OrtCustomOp.GetExecutionProviderType$VH.set(seg.asSlice(index * sizeof()), x);
     }
 
-    public static GetExecutionProviderType GetExecutionProviderType(MemorySegment segment) {
-        return GetExecutionProviderType.ofAddress(GetExecutionProviderType$get(segment));
+    public static GetExecutionProviderType GetExecutionProviderType(MemorySegment segment, MemorySession session) {
+        return GetExecutionProviderType.ofAddress(GetExecutionProviderType$get(segment), session);
     }
 
-    static final FunctionDescriptor GetInputType$FUNC = FunctionDescriptor.of(C_INT, C_POINTER, C_LONG_LONG);
-    static final MethodHandle GetInputType$MH = RuntimeHelper.downcallHandle(
-            "(Ljdk/incubator/foreign/MemoryAddress;J)I", OrtCustomOp.GetInputType$FUNC, false);
+    static final FunctionDescriptor GetInputType$FUNC = FunctionDescriptor.of(
+            Constants$root.C_INT$LAYOUT, Constants$root.C_POINTER$LAYOUT, Constants$root.C_LONG_LONG$LAYOUT);
+    static final MethodHandle GetInputType$MH = RuntimeHelper.downcallHandle(OrtCustomOp.GetInputType$FUNC);
 
     public interface GetInputType {
 
-        int apply(jdk.incubator.foreign.MemoryAddress x0, long x1);
+        int apply(java.lang.foreign.MemoryAddress _x0, long _x1);
 
-        static MemoryAddress allocate(GetInputType fi) {
-            return RuntimeHelper.upcallStub(
-                    GetInputType.class, fi, OrtCustomOp.GetInputType$FUNC, "(Ljdk/incubator/foreign/MemoryAddress;J)I");
+        static MemorySegment allocate(GetInputType fi, MemorySession session) {
+            return RuntimeHelper.upcallStub(GetInputType.class, fi, OrtCustomOp.GetInputType$FUNC, session);
         }
 
-        static MemoryAddress allocate(GetInputType fi, ResourceScope scope) {
-            return RuntimeHelper.upcallStub(
-                    GetInputType.class,
-                    fi,
-                    OrtCustomOp.GetInputType$FUNC,
-                    "(Ljdk/incubator/foreign/MemoryAddress;J)I",
-                    scope);
-        }
-
-        static GetInputType ofAddress(MemoryAddress addr) {
-            return (jdk.incubator.foreign.MemoryAddress x0, long x1) -> {
+        static GetInputType ofAddress(MemoryAddress addr, MemorySession session) {
+            MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+            return (java.lang.foreign.MemoryAddress __x0, long __x1) -> {
                 try {
-                    return (int) OrtCustomOp.GetInputType$MH.invokeExact((Addressable) addr, x0, x1);
+                    return (int) OrtCustomOp.GetInputType$MH.invokeExact(
+                            (Addressable) symbol, (java.lang.foreign.Addressable) __x0, __x1);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -293,15 +251,15 @@ public class OrtCustomOp {
         }
     }
 
-    static final VarHandle GetInputType$VH = MemoryHandles.asAddressVarHandle(
-            $struct$LAYOUT.varHandle(long.class, MemoryLayout.PathElement.groupElement("GetInputType")));
+    static final VarHandle GetInputType$VH =
+            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("GetInputType"));
 
     public static VarHandle GetInputType$VH() {
         return OrtCustomOp.GetInputType$VH;
     }
 
     public static MemoryAddress GetInputType$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress) OrtCustomOp.GetInputType$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress) OrtCustomOp.GetInputType$VH.get(seg);
     }
 
     public static void GetInputType$set(MemorySegment seg, MemoryAddress x) {
@@ -309,46 +267,35 @@ public class OrtCustomOp {
     }
 
     public static MemoryAddress GetInputType$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress) OrtCustomOp.GetInputType$VH.get(seg.asSlice(index * sizeof()));
+        return (java.lang.foreign.MemoryAddress) OrtCustomOp.GetInputType$VH.get(seg.asSlice(index * sizeof()));
     }
 
     public static void GetInputType$set(MemorySegment seg, long index, MemoryAddress x) {
         OrtCustomOp.GetInputType$VH.set(seg.asSlice(index * sizeof()), x);
     }
 
-    public static GetInputType GetInputType(MemorySegment segment) {
-        return GetInputType.ofAddress(GetInputType$get(segment));
+    public static GetInputType GetInputType(MemorySegment segment, MemorySession session) {
+        return GetInputType.ofAddress(GetInputType$get(segment), session);
     }
 
-    static final FunctionDescriptor GetInputTypeCount$FUNC = FunctionDescriptor.of(C_LONG_LONG, C_POINTER);
-    static final MethodHandle GetInputTypeCount$MH = RuntimeHelper.downcallHandle(
-            "(Ljdk/incubator/foreign/MemoryAddress;)J", OrtCustomOp.GetInputTypeCount$FUNC, false);
+    static final FunctionDescriptor GetInputTypeCount$FUNC =
+            FunctionDescriptor.of(Constants$root.C_LONG_LONG$LAYOUT, Constants$root.C_POINTER$LAYOUT);
+    static final MethodHandle GetInputTypeCount$MH = RuntimeHelper.downcallHandle(OrtCustomOp.GetInputTypeCount$FUNC);
 
     public interface GetInputTypeCount {
 
-        long apply(jdk.incubator.foreign.MemoryAddress x0);
+        long apply(java.lang.foreign.MemoryAddress _x0);
 
-        static MemoryAddress allocate(GetInputTypeCount fi) {
-            return RuntimeHelper.upcallStub(
-                    GetInputTypeCount.class,
-                    fi,
-                    OrtCustomOp.GetInputTypeCount$FUNC,
-                    "(Ljdk/incubator/foreign/MemoryAddress;)J");
+        static MemorySegment allocate(GetInputTypeCount fi, MemorySession session) {
+            return RuntimeHelper.upcallStub(GetInputTypeCount.class, fi, OrtCustomOp.GetInputTypeCount$FUNC, session);
         }
 
-        static MemoryAddress allocate(GetInputTypeCount fi, ResourceScope scope) {
-            return RuntimeHelper.upcallStub(
-                    GetInputTypeCount.class,
-                    fi,
-                    OrtCustomOp.GetInputTypeCount$FUNC,
-                    "(Ljdk/incubator/foreign/MemoryAddress;)J",
-                    scope);
-        }
-
-        static GetInputTypeCount ofAddress(MemoryAddress addr) {
-            return (jdk.incubator.foreign.MemoryAddress x0) -> {
+        static GetInputTypeCount ofAddress(MemoryAddress addr, MemorySession session) {
+            MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+            return (java.lang.foreign.MemoryAddress __x0) -> {
                 try {
-                    return (long) OrtCustomOp.GetInputTypeCount$MH.invokeExact((Addressable) addr, x0);
+                    return (long) OrtCustomOp.GetInputTypeCount$MH.invokeExact(
+                            (Addressable) symbol, (java.lang.foreign.Addressable) __x0);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -356,15 +303,15 @@ public class OrtCustomOp {
         }
     }
 
-    static final VarHandle GetInputTypeCount$VH = MemoryHandles.asAddressVarHandle(
-            $struct$LAYOUT.varHandle(long.class, MemoryLayout.PathElement.groupElement("GetInputTypeCount")));
+    static final VarHandle GetInputTypeCount$VH =
+            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("GetInputTypeCount"));
 
     public static VarHandle GetInputTypeCount$VH() {
         return OrtCustomOp.GetInputTypeCount$VH;
     }
 
     public static MemoryAddress GetInputTypeCount$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress) OrtCustomOp.GetInputTypeCount$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress) OrtCustomOp.GetInputTypeCount$VH.get(seg);
     }
 
     public static void GetInputTypeCount$set(MemorySegment seg, MemoryAddress x) {
@@ -372,47 +319,35 @@ public class OrtCustomOp {
     }
 
     public static MemoryAddress GetInputTypeCount$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)
-                OrtCustomOp.GetInputTypeCount$VH.get(seg.asSlice(index * sizeof()));
+        return (java.lang.foreign.MemoryAddress) OrtCustomOp.GetInputTypeCount$VH.get(seg.asSlice(index * sizeof()));
     }
 
     public static void GetInputTypeCount$set(MemorySegment seg, long index, MemoryAddress x) {
         OrtCustomOp.GetInputTypeCount$VH.set(seg.asSlice(index * sizeof()), x);
     }
 
-    public static GetInputTypeCount GetInputTypeCount(MemorySegment segment) {
-        return GetInputTypeCount.ofAddress(GetInputTypeCount$get(segment));
+    public static GetInputTypeCount GetInputTypeCount(MemorySegment segment, MemorySession session) {
+        return GetInputTypeCount.ofAddress(GetInputTypeCount$get(segment), session);
     }
 
-    static final FunctionDescriptor GetOutputType$FUNC = FunctionDescriptor.of(C_INT, C_POINTER, C_LONG_LONG);
-    static final MethodHandle GetOutputType$MH = RuntimeHelper.downcallHandle(
-            "(Ljdk/incubator/foreign/MemoryAddress;J)I", OrtCustomOp.GetOutputType$FUNC, false);
+    static final FunctionDescriptor GetOutputType$FUNC = FunctionDescriptor.of(
+            Constants$root.C_INT$LAYOUT, Constants$root.C_POINTER$LAYOUT, Constants$root.C_LONG_LONG$LAYOUT);
+    static final MethodHandle GetOutputType$MH = RuntimeHelper.downcallHandle(OrtCustomOp.GetOutputType$FUNC);
 
     public interface GetOutputType {
 
-        int apply(jdk.incubator.foreign.MemoryAddress x0, long x1);
+        int apply(java.lang.foreign.MemoryAddress _x0, long _x1);
 
-        static MemoryAddress allocate(GetOutputType fi) {
-            return RuntimeHelper.upcallStub(
-                    GetOutputType.class,
-                    fi,
-                    OrtCustomOp.GetOutputType$FUNC,
-                    "(Ljdk/incubator/foreign/MemoryAddress;J)I");
+        static MemorySegment allocate(GetOutputType fi, MemorySession session) {
+            return RuntimeHelper.upcallStub(GetOutputType.class, fi, OrtCustomOp.GetOutputType$FUNC, session);
         }
 
-        static MemoryAddress allocate(GetOutputType fi, ResourceScope scope) {
-            return RuntimeHelper.upcallStub(
-                    GetOutputType.class,
-                    fi,
-                    OrtCustomOp.GetOutputType$FUNC,
-                    "(Ljdk/incubator/foreign/MemoryAddress;J)I",
-                    scope);
-        }
-
-        static GetOutputType ofAddress(MemoryAddress addr) {
-            return (jdk.incubator.foreign.MemoryAddress x0, long x1) -> {
+        static GetOutputType ofAddress(MemoryAddress addr, MemorySession session) {
+            MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+            return (java.lang.foreign.MemoryAddress __x0, long __x1) -> {
                 try {
-                    return (int) OrtCustomOp.GetOutputType$MH.invokeExact((Addressable) addr, x0, x1);
+                    return (int) OrtCustomOp.GetOutputType$MH.invokeExact(
+                            (Addressable) symbol, (java.lang.foreign.Addressable) __x0, __x1);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -420,15 +355,15 @@ public class OrtCustomOp {
         }
     }
 
-    static final VarHandle GetOutputType$VH = MemoryHandles.asAddressVarHandle(
-            $struct$LAYOUT.varHandle(long.class, MemoryLayout.PathElement.groupElement("GetOutputType")));
+    static final VarHandle GetOutputType$VH =
+            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("GetOutputType"));
 
     public static VarHandle GetOutputType$VH() {
         return OrtCustomOp.GetOutputType$VH;
     }
 
     public static MemoryAddress GetOutputType$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress) OrtCustomOp.GetOutputType$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress) OrtCustomOp.GetOutputType$VH.get(seg);
     }
 
     public static void GetOutputType$set(MemorySegment seg, MemoryAddress x) {
@@ -436,46 +371,35 @@ public class OrtCustomOp {
     }
 
     public static MemoryAddress GetOutputType$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress) OrtCustomOp.GetOutputType$VH.get(seg.asSlice(index * sizeof()));
+        return (java.lang.foreign.MemoryAddress) OrtCustomOp.GetOutputType$VH.get(seg.asSlice(index * sizeof()));
     }
 
     public static void GetOutputType$set(MemorySegment seg, long index, MemoryAddress x) {
         OrtCustomOp.GetOutputType$VH.set(seg.asSlice(index * sizeof()), x);
     }
 
-    public static GetOutputType GetOutputType(MemorySegment segment) {
-        return GetOutputType.ofAddress(GetOutputType$get(segment));
+    public static GetOutputType GetOutputType(MemorySegment segment, MemorySession session) {
+        return GetOutputType.ofAddress(GetOutputType$get(segment), session);
     }
 
-    static final FunctionDescriptor GetOutputTypeCount$FUNC = FunctionDescriptor.of(C_LONG_LONG, C_POINTER);
-    static final MethodHandle GetOutputTypeCount$MH = RuntimeHelper.downcallHandle(
-            "(Ljdk/incubator/foreign/MemoryAddress;)J", OrtCustomOp.GetOutputTypeCount$FUNC, false);
+    static final FunctionDescriptor GetOutputTypeCount$FUNC =
+            FunctionDescriptor.of(Constants$root.C_LONG_LONG$LAYOUT, Constants$root.C_POINTER$LAYOUT);
+    static final MethodHandle GetOutputTypeCount$MH = RuntimeHelper.downcallHandle(OrtCustomOp.GetOutputTypeCount$FUNC);
 
     public interface GetOutputTypeCount {
 
-        long apply(jdk.incubator.foreign.MemoryAddress x0);
+        long apply(java.lang.foreign.MemoryAddress _x0);
 
-        static MemoryAddress allocate(GetOutputTypeCount fi) {
-            return RuntimeHelper.upcallStub(
-                    GetOutputTypeCount.class,
-                    fi,
-                    OrtCustomOp.GetOutputTypeCount$FUNC,
-                    "(Ljdk/incubator/foreign/MemoryAddress;)J");
+        static MemorySegment allocate(GetOutputTypeCount fi, MemorySession session) {
+            return RuntimeHelper.upcallStub(GetOutputTypeCount.class, fi, OrtCustomOp.GetOutputTypeCount$FUNC, session);
         }
 
-        static MemoryAddress allocate(GetOutputTypeCount fi, ResourceScope scope) {
-            return RuntimeHelper.upcallStub(
-                    GetOutputTypeCount.class,
-                    fi,
-                    OrtCustomOp.GetOutputTypeCount$FUNC,
-                    "(Ljdk/incubator/foreign/MemoryAddress;)J",
-                    scope);
-        }
-
-        static GetOutputTypeCount ofAddress(MemoryAddress addr) {
-            return (jdk.incubator.foreign.MemoryAddress x0) -> {
+        static GetOutputTypeCount ofAddress(MemoryAddress addr, MemorySession session) {
+            MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+            return (java.lang.foreign.MemoryAddress __x0) -> {
                 try {
-                    return (long) OrtCustomOp.GetOutputTypeCount$MH.invokeExact((Addressable) addr, x0);
+                    return (long) OrtCustomOp.GetOutputTypeCount$MH.invokeExact(
+                            (Addressable) symbol, (java.lang.foreign.Addressable) __x0);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -483,15 +407,15 @@ public class OrtCustomOp {
         }
     }
 
-    static final VarHandle GetOutputTypeCount$VH = MemoryHandles.asAddressVarHandle(
-            $struct$LAYOUT.varHandle(long.class, MemoryLayout.PathElement.groupElement("GetOutputTypeCount")));
+    static final VarHandle GetOutputTypeCount$VH =
+            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("GetOutputTypeCount"));
 
     public static VarHandle GetOutputTypeCount$VH() {
         return OrtCustomOp.GetOutputTypeCount$VH;
     }
 
     public static MemoryAddress GetOutputTypeCount$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress) OrtCustomOp.GetOutputTypeCount$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress) OrtCustomOp.GetOutputTypeCount$VH.get(seg);
     }
 
     public static void GetOutputTypeCount$set(MemorySegment seg, MemoryAddress x) {
@@ -499,49 +423,36 @@ public class OrtCustomOp {
     }
 
     public static MemoryAddress GetOutputTypeCount$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)
-                OrtCustomOp.GetOutputTypeCount$VH.get(seg.asSlice(index * sizeof()));
+        return (java.lang.foreign.MemoryAddress) OrtCustomOp.GetOutputTypeCount$VH.get(seg.asSlice(index * sizeof()));
     }
 
     public static void GetOutputTypeCount$set(MemorySegment seg, long index, MemoryAddress x) {
         OrtCustomOp.GetOutputTypeCount$VH.set(seg.asSlice(index * sizeof()), x);
     }
 
-    public static GetOutputTypeCount GetOutputTypeCount(MemorySegment segment) {
-        return GetOutputTypeCount.ofAddress(GetOutputTypeCount$get(segment));
+    public static GetOutputTypeCount GetOutputTypeCount(MemorySegment segment, MemorySession session) {
+        return GetOutputTypeCount.ofAddress(GetOutputTypeCount$get(segment), session);
     }
 
-    static final FunctionDescriptor KernelCompute$FUNC = FunctionDescriptor.ofVoid(C_POINTER, C_POINTER);
-    static final MethodHandle KernelCompute$MH = RuntimeHelper.downcallHandle(
-            "(Ljdk/incubator/foreign/MemoryAddress;Ljdk/incubator/foreign/MemoryAddress;)V",
-            OrtCustomOp.KernelCompute$FUNC,
-            false);
+    static final FunctionDescriptor KernelCompute$FUNC =
+            FunctionDescriptor.ofVoid(Constants$root.C_POINTER$LAYOUT, Constants$root.C_POINTER$LAYOUT);
+    static final MethodHandle KernelCompute$MH = RuntimeHelper.downcallHandle(OrtCustomOp.KernelCompute$FUNC);
 
     public interface KernelCompute {
 
-        void apply(jdk.incubator.foreign.MemoryAddress x0, jdk.incubator.foreign.MemoryAddress x1);
+        void apply(java.lang.foreign.MemoryAddress _x0, java.lang.foreign.MemoryAddress _x1);
 
-        static MemoryAddress allocate(KernelCompute fi) {
-            return RuntimeHelper.upcallStub(
-                    KernelCompute.class,
-                    fi,
-                    OrtCustomOp.KernelCompute$FUNC,
-                    "(Ljdk/incubator/foreign/MemoryAddress;Ljdk/incubator/foreign/MemoryAddress;)V");
+        static MemorySegment allocate(KernelCompute fi, MemorySession session) {
+            return RuntimeHelper.upcallStub(KernelCompute.class, fi, OrtCustomOp.KernelCompute$FUNC, session);
         }
 
-        static MemoryAddress allocate(KernelCompute fi, ResourceScope scope) {
-            return RuntimeHelper.upcallStub(
-                    KernelCompute.class,
-                    fi,
-                    OrtCustomOp.KernelCompute$FUNC,
-                    "(Ljdk/incubator/foreign/MemoryAddress;Ljdk/incubator/foreign/MemoryAddress;)V",
-                    scope);
-        }
-
-        static KernelCompute ofAddress(MemoryAddress addr) {
-            return (jdk.incubator.foreign.MemoryAddress x0, jdk.incubator.foreign.MemoryAddress x1) -> {
+        static KernelCompute ofAddress(MemoryAddress addr, MemorySession session) {
+            MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+            return (java.lang.foreign.MemoryAddress __x0, java.lang.foreign.MemoryAddress __x1) -> {
                 try {
-                    OrtCustomOp.KernelCompute$MH.invokeExact((Addressable) addr, x0, x1);
+                    OrtCustomOp.KernelCompute$MH.invokeExact(
+                            (Addressable) symbol, (java.lang.foreign.Addressable) __x0, (java.lang.foreign.Addressable)
+                                    __x1);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -549,15 +460,15 @@ public class OrtCustomOp {
         }
     }
 
-    static final VarHandle KernelCompute$VH = MemoryHandles.asAddressVarHandle(
-            $struct$LAYOUT.varHandle(long.class, MemoryLayout.PathElement.groupElement("KernelCompute")));
+    static final VarHandle KernelCompute$VH =
+            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("KernelCompute"));
 
     public static VarHandle KernelCompute$VH() {
         return OrtCustomOp.KernelCompute$VH;
     }
 
     public static MemoryAddress KernelCompute$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress) OrtCustomOp.KernelCompute$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress) OrtCustomOp.KernelCompute$VH.get(seg);
     }
 
     public static void KernelCompute$set(MemorySegment seg, MemoryAddress x) {
@@ -565,46 +476,34 @@ public class OrtCustomOp {
     }
 
     public static MemoryAddress KernelCompute$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress) OrtCustomOp.KernelCompute$VH.get(seg.asSlice(index * sizeof()));
+        return (java.lang.foreign.MemoryAddress) OrtCustomOp.KernelCompute$VH.get(seg.asSlice(index * sizeof()));
     }
 
     public static void KernelCompute$set(MemorySegment seg, long index, MemoryAddress x) {
         OrtCustomOp.KernelCompute$VH.set(seg.asSlice(index * sizeof()), x);
     }
 
-    public static KernelCompute KernelCompute(MemorySegment segment) {
-        return KernelCompute.ofAddress(KernelCompute$get(segment));
+    public static KernelCompute KernelCompute(MemorySegment segment, MemorySession session) {
+        return KernelCompute.ofAddress(KernelCompute$get(segment), session);
     }
 
-    static final FunctionDescriptor KernelDestroy$FUNC = FunctionDescriptor.ofVoid(C_POINTER);
-    static final MethodHandle KernelDestroy$MH = RuntimeHelper.downcallHandle(
-            "(Ljdk/incubator/foreign/MemoryAddress;)V", OrtCustomOp.KernelDestroy$FUNC, false);
+    static final FunctionDescriptor KernelDestroy$FUNC = FunctionDescriptor.ofVoid(Constants$root.C_POINTER$LAYOUT);
+    static final MethodHandle KernelDestroy$MH = RuntimeHelper.downcallHandle(OrtCustomOp.KernelDestroy$FUNC);
 
     public interface KernelDestroy {
 
-        void apply(jdk.incubator.foreign.MemoryAddress x0);
+        void apply(java.lang.foreign.MemoryAddress _x0);
 
-        static MemoryAddress allocate(KernelDestroy fi) {
-            return RuntimeHelper.upcallStub(
-                    KernelDestroy.class,
-                    fi,
-                    OrtCustomOp.KernelDestroy$FUNC,
-                    "(Ljdk/incubator/foreign/MemoryAddress;)V");
+        static MemorySegment allocate(KernelDestroy fi, MemorySession session) {
+            return RuntimeHelper.upcallStub(KernelDestroy.class, fi, OrtCustomOp.KernelDestroy$FUNC, session);
         }
 
-        static MemoryAddress allocate(KernelDestroy fi, ResourceScope scope) {
-            return RuntimeHelper.upcallStub(
-                    KernelDestroy.class,
-                    fi,
-                    OrtCustomOp.KernelDestroy$FUNC,
-                    "(Ljdk/incubator/foreign/MemoryAddress;)V",
-                    scope);
-        }
-
-        static KernelDestroy ofAddress(MemoryAddress addr) {
-            return (jdk.incubator.foreign.MemoryAddress x0) -> {
+        static KernelDestroy ofAddress(MemoryAddress addr, MemorySession session) {
+            MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+            return (java.lang.foreign.MemoryAddress __x0) -> {
                 try {
-                    OrtCustomOp.KernelDestroy$MH.invokeExact((Addressable) addr, x0);
+                    OrtCustomOp.KernelDestroy$MH.invokeExact(
+                            (Addressable) symbol, (java.lang.foreign.Addressable) __x0);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -612,15 +511,15 @@ public class OrtCustomOp {
         }
     }
 
-    static final VarHandle KernelDestroy$VH = MemoryHandles.asAddressVarHandle(
-            $struct$LAYOUT.varHandle(long.class, MemoryLayout.PathElement.groupElement("KernelDestroy")));
+    static final VarHandle KernelDestroy$VH =
+            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("KernelDestroy"));
 
     public static VarHandle KernelDestroy$VH() {
         return OrtCustomOp.KernelDestroy$VH;
     }
 
     public static MemoryAddress KernelDestroy$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress) OrtCustomOp.KernelDestroy$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress) OrtCustomOp.KernelDestroy$VH.get(seg);
     }
 
     public static void KernelDestroy$set(MemorySegment seg, MemoryAddress x) {
@@ -628,46 +527,37 @@ public class OrtCustomOp {
     }
 
     public static MemoryAddress KernelDestroy$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress) OrtCustomOp.KernelDestroy$VH.get(seg.asSlice(index * sizeof()));
+        return (java.lang.foreign.MemoryAddress) OrtCustomOp.KernelDestroy$VH.get(seg.asSlice(index * sizeof()));
     }
 
     public static void KernelDestroy$set(MemorySegment seg, long index, MemoryAddress x) {
         OrtCustomOp.KernelDestroy$VH.set(seg.asSlice(index * sizeof()), x);
     }
 
-    public static KernelDestroy KernelDestroy(MemorySegment segment) {
-        return KernelDestroy.ofAddress(KernelDestroy$get(segment));
+    public static KernelDestroy KernelDestroy(MemorySegment segment, MemorySession session) {
+        return KernelDestroy.ofAddress(KernelDestroy$get(segment), session);
     }
 
-    static final FunctionDescriptor GetInputCharacteristic$FUNC = FunctionDescriptor.of(C_INT, C_POINTER, C_LONG_LONG);
-    static final MethodHandle GetInputCharacteristic$MH = RuntimeHelper.downcallHandle(
-            "(Ljdk/incubator/foreign/MemoryAddress;J)I", OrtCustomOp.GetInputCharacteristic$FUNC, false);
+    static final FunctionDescriptor GetInputCharacteristic$FUNC = FunctionDescriptor.of(
+            Constants$root.C_INT$LAYOUT, Constants$root.C_POINTER$LAYOUT, Constants$root.C_LONG_LONG$LAYOUT);
+    static final MethodHandle GetInputCharacteristic$MH =
+            RuntimeHelper.downcallHandle(OrtCustomOp.GetInputCharacteristic$FUNC);
 
     public interface GetInputCharacteristic {
 
-        int apply(jdk.incubator.foreign.MemoryAddress x0, long x1);
+        int apply(java.lang.foreign.MemoryAddress _x0, long _x1);
 
-        static MemoryAddress allocate(GetInputCharacteristic fi) {
+        static MemorySegment allocate(GetInputCharacteristic fi, MemorySession session) {
             return RuntimeHelper.upcallStub(
-                    GetInputCharacteristic.class,
-                    fi,
-                    OrtCustomOp.GetInputCharacteristic$FUNC,
-                    "(Ljdk/incubator/foreign/MemoryAddress;J)I");
+                    GetInputCharacteristic.class, fi, OrtCustomOp.GetInputCharacteristic$FUNC, session);
         }
 
-        static MemoryAddress allocate(GetInputCharacteristic fi, ResourceScope scope) {
-            return RuntimeHelper.upcallStub(
-                    GetInputCharacteristic.class,
-                    fi,
-                    OrtCustomOp.GetInputCharacteristic$FUNC,
-                    "(Ljdk/incubator/foreign/MemoryAddress;J)I",
-                    scope);
-        }
-
-        static GetInputCharacteristic ofAddress(MemoryAddress addr) {
-            return (jdk.incubator.foreign.MemoryAddress x0, long x1) -> {
+        static GetInputCharacteristic ofAddress(MemoryAddress addr, MemorySession session) {
+            MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+            return (java.lang.foreign.MemoryAddress __x0, long __x1) -> {
                 try {
-                    return (int) OrtCustomOp.GetInputCharacteristic$MH.invokeExact((Addressable) addr, x0, x1);
+                    return (int) OrtCustomOp.GetInputCharacteristic$MH.invokeExact(
+                            (Addressable) symbol, (java.lang.foreign.Addressable) __x0, __x1);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -675,15 +565,15 @@ public class OrtCustomOp {
         }
     }
 
-    static final VarHandle GetInputCharacteristic$VH = MemoryHandles.asAddressVarHandle(
-            $struct$LAYOUT.varHandle(long.class, MemoryLayout.PathElement.groupElement("GetInputCharacteristic")));
+    static final VarHandle GetInputCharacteristic$VH =
+            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("GetInputCharacteristic"));
 
     public static VarHandle GetInputCharacteristic$VH() {
         return OrtCustomOp.GetInputCharacteristic$VH;
     }
 
     public static MemoryAddress GetInputCharacteristic$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress) OrtCustomOp.GetInputCharacteristic$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress) OrtCustomOp.GetInputCharacteristic$VH.get(seg);
     }
 
     public static void GetInputCharacteristic$set(MemorySegment seg, MemoryAddress x) {
@@ -691,7 +581,7 @@ public class OrtCustomOp {
     }
 
     public static MemoryAddress GetInputCharacteristic$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)
+        return (java.lang.foreign.MemoryAddress)
                 OrtCustomOp.GetInputCharacteristic$VH.get(seg.asSlice(index * sizeof()));
     }
 
@@ -699,39 +589,30 @@ public class OrtCustomOp {
         OrtCustomOp.GetInputCharacteristic$VH.set(seg.asSlice(index * sizeof()), x);
     }
 
-    public static GetInputCharacteristic GetInputCharacteristic(MemorySegment segment) {
-        return GetInputCharacteristic.ofAddress(GetInputCharacteristic$get(segment));
+    public static GetInputCharacteristic GetInputCharacteristic(MemorySegment segment, MemorySession session) {
+        return GetInputCharacteristic.ofAddress(GetInputCharacteristic$get(segment), session);
     }
 
-    static final FunctionDescriptor GetOutputCharacteristic$FUNC = FunctionDescriptor.of(C_INT, C_POINTER, C_LONG_LONG);
-    static final MethodHandle GetOutputCharacteristic$MH = RuntimeHelper.downcallHandle(
-            "(Ljdk/incubator/foreign/MemoryAddress;J)I", OrtCustomOp.GetOutputCharacteristic$FUNC, false);
+    static final FunctionDescriptor GetOutputCharacteristic$FUNC = FunctionDescriptor.of(
+            Constants$root.C_INT$LAYOUT, Constants$root.C_POINTER$LAYOUT, Constants$root.C_LONG_LONG$LAYOUT);
+    static final MethodHandle GetOutputCharacteristic$MH =
+            RuntimeHelper.downcallHandle(OrtCustomOp.GetOutputCharacteristic$FUNC);
 
     public interface GetOutputCharacteristic {
 
-        int apply(jdk.incubator.foreign.MemoryAddress x0, long x1);
+        int apply(java.lang.foreign.MemoryAddress _x0, long _x1);
 
-        static MemoryAddress allocate(GetOutputCharacteristic fi) {
+        static MemorySegment allocate(GetOutputCharacteristic fi, MemorySession session) {
             return RuntimeHelper.upcallStub(
-                    GetOutputCharacteristic.class,
-                    fi,
-                    OrtCustomOp.GetOutputCharacteristic$FUNC,
-                    "(Ljdk/incubator/foreign/MemoryAddress;J)I");
+                    GetOutputCharacteristic.class, fi, OrtCustomOp.GetOutputCharacteristic$FUNC, session);
         }
 
-        static MemoryAddress allocate(GetOutputCharacteristic fi, ResourceScope scope) {
-            return RuntimeHelper.upcallStub(
-                    GetOutputCharacteristic.class,
-                    fi,
-                    OrtCustomOp.GetOutputCharacteristic$FUNC,
-                    "(Ljdk/incubator/foreign/MemoryAddress;J)I",
-                    scope);
-        }
-
-        static GetOutputCharacteristic ofAddress(MemoryAddress addr) {
-            return (jdk.incubator.foreign.MemoryAddress x0, long x1) -> {
+        static GetOutputCharacteristic ofAddress(MemoryAddress addr, MemorySession session) {
+            MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
+            return (java.lang.foreign.MemoryAddress __x0, long __x1) -> {
                 try {
-                    return (int) OrtCustomOp.GetOutputCharacteristic$MH.invokeExact((Addressable) addr, x0, x1);
+                    return (int) OrtCustomOp.GetOutputCharacteristic$MH.invokeExact(
+                            (Addressable) symbol, (java.lang.foreign.Addressable) __x0, __x1);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -739,15 +620,15 @@ public class OrtCustomOp {
         }
     }
 
-    static final VarHandle GetOutputCharacteristic$VH = MemoryHandles.asAddressVarHandle(
-            $struct$LAYOUT.varHandle(long.class, MemoryLayout.PathElement.groupElement("GetOutputCharacteristic")));
+    static final VarHandle GetOutputCharacteristic$VH =
+            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("GetOutputCharacteristic"));
 
     public static VarHandle GetOutputCharacteristic$VH() {
         return OrtCustomOp.GetOutputCharacteristic$VH;
     }
 
     public static MemoryAddress GetOutputCharacteristic$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress) OrtCustomOp.GetOutputCharacteristic$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress) OrtCustomOp.GetOutputCharacteristic$VH.get(seg);
     }
 
     public static void GetOutputCharacteristic$set(MemorySegment seg, MemoryAddress x) {
@@ -755,7 +636,7 @@ public class OrtCustomOp {
     }
 
     public static MemoryAddress GetOutputCharacteristic$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)
+        return (java.lang.foreign.MemoryAddress)
                 OrtCustomOp.GetOutputCharacteristic$VH.get(seg.asSlice(index * sizeof()));
     }
 
@@ -763,8 +644,8 @@ public class OrtCustomOp {
         OrtCustomOp.GetOutputCharacteristic$VH.set(seg.asSlice(index * sizeof()), x);
     }
 
-    public static GetOutputCharacteristic GetOutputCharacteristic(MemorySegment segment) {
-        return GetOutputCharacteristic.ofAddress(GetOutputCharacteristic$get(segment));
+    public static GetOutputCharacteristic GetOutputCharacteristic(MemorySegment segment, MemorySession session) {
+        return GetOutputCharacteristic.ofAddress(GetOutputCharacteristic$get(segment), session);
     }
 
     public static long sizeof() {
@@ -775,19 +656,11 @@ public class OrtCustomOp {
         return allocator.allocate($LAYOUT());
     }
 
-    public static MemorySegment allocate(ResourceScope scope) {
-        return allocate(SegmentAllocator.ofScope(scope));
-    }
-
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
 
-    public static MemorySegment allocateArray(int len, ResourceScope scope) {
-        return allocateArray(len, SegmentAllocator.ofScope(scope));
-    }
-
-    public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) {
-        return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope);
+    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) {
+        return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session);
     }
 }
